# chica-cpp-port

./: .gitignore
Chica Server.apk_Decompiler.com/resources/: AndroidManifest.xml  classes.dex
Chica Server.apk_Decompiler.com/sources/a0/: a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java
Chica Server.apk_Decompiler.com/sources/a1/: a.java  b.java  c.java  d.java
Chica Server.apk_Decompiler.com/sources/a2/: a.java  a0.java  a1.java  a2.java  a3.java  a4.java  a5.java  a6.java  a7.java  a8.java  b.java  b0.java  b1.java  b2.java  b3.java  b4.java  b5.java  b6.java  b7.java  b8.java  c.java  c0.java  c1.java  c2.java  c3.java  c4.java  c5.java  c6.java  c7.java  c8.java  d.java  d0.java  d1.java  d2.java  d3.java  d4.java  d5.java  d6.java  d7.java  d8.java  (+211 more)
Chica Server.apk_Decompiler.com/sources/a3/: a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java  o.java  p.java  q.java  r.java  s.java  t.java  u.java
Chica Server.apk_Decompiler.com/sources/a4/: a.java
Chica Server.apk_Decompiler.com/sources/a5/: a.java  b.java
Chica Server.apk_Decompiler.com/sources/b/: a.java  b.java
Chica Server.apk_Decompiler.com/sources/b0/: a.java  b.java  c.java  d.java  e.java  f.java  g.java  h.java  i.java  j.java  k.java  l.java  m.java  n.java
Chica Server/Chica Server/: AndroidManifest.xml  apktool.yml
chica_cpp_v7/: CMakeLists.txt  README.md
chica_cpp_v7/src/: config.cpp  config.h  gait.h  kinematics.h  main.cpp  pose.h  robot.h  serial.h  vec3.h
(+7216 files in other folders)
